--- a/refactoring_catalog/extracting_functions/example_code/1.md
+++ b/refactoring_catalog/extracting_functions/example_code/1.md
@@ -25,6 +25,35 @@ const printOrder = (order: Order): void => {
 };
 ```
 
+### 関数の抽出に関する初期コード分析
+
+#### 関数抽出の必要性
+
+1. **顧客情報の出力**:
+
+   - 2 行目の `console.log(`顧客名: ${order.customer}`);` は独立した機能として抽出可能です。
+
+2. **注文アイテムの出力と合計計算**:
+
+   - 4-8 行目のループ処理は、アイテムの出力と合計金額の計算を行っており、独立した関数として抽出できます。
+
+3. **合計金額の出力**:
+   - 最後の行 `console.log(`合計金額: ¥${total}`);` も独立した関数として抽出可能です。
+
+#### 抽出すべき関数
+
+1. `printCustomerInfo`: 顧客情報の出力
+2. `printOrderItems`: 注文アイテムの出力と合計金額の計算
+3. `printTotalAmount`: 合計金額の出力
+
+#### 期待される改善
+
+- 各機能が独立した関数となり、コードの役割が明確になります。
+- 個々の関数が再利用可能になります。
+- `printOrder` 関数がより簡潔になり、全体の流れが把握しやすくなります。
+
+これらの関数を抽出することで、コードの構造が改善され、保守性と可読性が向上します。
+
 ## 2. 抽出する部分の特定
 
 注文アイテムの出力と合計金額の計算、および顧客情報の出力を別の関数として抽出します。
